--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "@ai-sdk/openai": "1.3.3",
     "@ai-sdk/vue": "1.2.1",
     "ai": "4.2.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.484.0",
     "openai": "^4.89.1",
+    "reka-ui": "^2.1.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "3.23.8"
   },
   "devDependencies": {
@@ -25,6 +31,7 @@
     "@vue/runtime-dom": "3.5.13",
     "@vue/shared": "3.5.12",
     "nuxt": "3.14.159",
+    "shadcn-nuxt": "1.0.3",
     "tailwindcss": "3.4.15",
     "unctx": "2.3.1",
     "vue": "3.5.13",
