--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@nuxt/devtools": "1.6.3",
     "@nuxt/ui-templates": "1.3.4",
     "@nuxtjs/tailwindcss": "6.12.2",
+    "@pinia/nuxt": "0.10.1",
     "@types/node": "20.17.24",
     "@vue/reactivity": "3.5.13",
     "@vue/runtime-core": "3.5.12",
     "@vue/runtime-dom": "3.5.13",
     "@vue/shared": "3.5.12",
-    "nuxt": "3.14.159",
+    "nuxt": "3.16.1",
+    "pinia": "^3.0.1",
     "shadcn-nuxt": "1.0.3",
     "tailwindcss": "3.4.15",
     "unctx": "2.3.1",
