--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/openai": "1.3.3",
     "@ai-sdk/vue": "1.2.1",
+    "@vueuse/core": "^13.0.0",
     "ai": "4.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
